<resources>
    <string name="app_name">MyApp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">首页</string>
    <string name="title_find">发现</string>
    <string name="title_trolley">购物车</string>
    <string name="title_form">订单</string>
    <string name="title_mien">我的</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
