<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/shouye"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/faxian"
        android:title="@string/title_find" />

    <item
        android:id="@+id/navigation_trolley"
        android:icon="@drawable/shopping"
        android:title="@string/title_trolley" />

    <item
        android:id="@+id/navigation_form"
        android:icon="@drawable/dingdan"
        android:title="@string/title_form" />
    <item
        android:id="@+id/navigation_mien"
        android:icon="@drawable/me"
        android:title="@string/title_mien" />

</menu>
